code(evokit): Substantial rework for readability
Update examples to use correct language; add cross references; add illustrations; clarify comments

--- a/docs/source/guides/examples/algorithm.ipynb
+++ b/docs/source/guides/examples/algorithm.ipynb
@@ -4,7 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a Custom `Controller`"
+    "# Making a Custom Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In EvoKit, an algorithm combines operators to perform the training process.\n",
+    "\n",
+    "This example defines an $(\\mu+\\lambda)$ algorithm that maintains one population and accepts one set operators (including one evaluator, one selector, and one variator). These characteristics can be customised.\n",
+    "\n",
+    "<center>\n",
+    "<img src='media/emperor.svg' style='width: 35em'></img>\n",
+    "</center>\n",
+    "\n",
+    "\n",
+    "See the following table for guides on how to define individual operators:\n",
+    "\n",
+    "| Component  | Guide                                          |\n",
+    "|------------|------------------------------------------------|\n",
+    "|`Individual`|[OneMax tutorial](./onemax.ipynb#Representation)|\n",
+    "|`Evaluator`|[Selector tutorial](./onemax.ipynb#Evaluator)|\n",
+    "|`Selector`|[OneMax tutorial](./selector.ipynb)|\n",
+    "|`Variator`|[OneMax tutorial](./onemax.ipynb#Variator)|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manual Selection\n",
+    "\n",
+    "The algorithm automates the training of evolutionary algorithms. To understand the process, it is best to train an algorithm by hand.\n",
+    "\n",
+    "Skip to [Designing the Algorithm](#Designing-the-Algorithm) for how an algorithm is defined."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialise Population\n",
+    "\n",
+    "The evolutionary process acts not on individuals, but populations.\n",
+    "\n",
+    "To begin, create the initial `Population` of bit string representations. Check that the individuals are correctly initialised. A population in EvoKit essentially behaves like a `list`."
    ]
   },
   {
@@ -13,28 +58,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "nb_dir = os.path.abspath(os.path.join('..', '..', '..', '..'))\n",
-    "if nb_dir not in sys.path:\n",
-    "    sys.path.append(nb_dir)"
+    "from evokit.core import Population\n",
+    "from evokit.evolvables.binstring import BinaryString"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]']\n"
+     ]
+    }
+   ],
    "source": [
-    "from evokit.core import Population\n",
-    "from evokit.evolvables.binstring import BinaryString"
+    "pop : Population[BinaryString] = Population[BinaryString]()\n",
+    "\n",
+    "pop.append(BinaryString(int('11111', 2), 5))\n",
+    "pop.append(BinaryString(int('11110', 2), 5))\n",
+    "pop.append(BinaryString(int('11100', 2), 5))\n",
+    "\n",
+    "print(pop)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First create a `Population`. This example uses the binary string representation."
+    "The `.fitness` attribute of an individual stores its fitness. For new individuals, this attribute is uninitialised and accessing it raises an error.\n",
+    "\n",
+    "To check if the `.fitness` is initialised, call `.has_fitness`."
    ]
   },
   {
@@ -46,28 +103,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]', '[1, 1, 0, 0, 0]', '[1, 0, 0, 0, 0]', '[0, 0, 0, 0, 0]']\n"
+      "An ValueError is raised, with message \"Fitness is accessed but null.\n",
+      "   Call `.has_fitness` to check if the fitness is defined.\"\n",
+      "It is _False_ that the fitness of `pop[0]` is defined.\n"
      ]
     }
    ],
    "source": [
-    "pop : Population[BinaryString] = Population[BinaryString]()\n",
+    "try:\n",
+    "    pop[0].fitness\n",
+    "except ValueError as e:\n",
+    "    print(f\"An {type(e).__name__} is raised, with message \\\"{e}\\\"\")\n",
     "\n",
-    "pop.append(BinaryString(int('11111', 2), 5))\n",
-    "pop.append(BinaryString(int('11110', 2), 5))\n",
-    "pop.append(BinaryString(int('11100', 2), 5))\n",
-    "pop.append(BinaryString(int('11000', 2), 5))\n",
-    "pop.append(BinaryString(int('10000', 2), 5))\n",
-    "pop.append(BinaryString(int('00000', 2), 5))\n",
-    "\n",
-    "print(pop)"
+    "print(f\"It is _{pop[0].has_fitness()}_ that the fitness of `pop[0]` is defined.\") "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When an BinaryString is created, it has yet to be evaluated. Attempting to access its `.fitness` attribute raises an error."
+    "### Variate\n",
+    "\n",
+    "A variator creates new individuals (offspring) from existing individuals. A mutator, in particular, is a variator that uses only one parent. All variators in EvoKit must ensure that operations performed on offspring do not affect the parent.\n",
+    "\n",
+    "The canonical mutator (`MutateBits`) for bit strings flips each digit with probability `mutation_rate`. Applying the mutator to the population creates a new population."
    ]
   },
   {
@@ -79,48 +138,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An ValueError is raised, with message \"Score is accessed but null\"\n"
+      "Parent:    ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]']\n",
+      "Offspring: ['[1, 1, 1, 0, 1]', '[0, 1, 1, 1, 1]', '[1, 1, 1, 0, 0]']\n"
      ]
     }
    ],
    "source": [
-    "try:\n",
-    "    pop[0].fitness\n",
-    "except ValueError as e:\n",
-    "    print(f\"An {type(e).__name__} is raised, with message \\\"{e}\\\"\")"
+    "from evokit.evolvables.binstring import MutateBits\n",
+    "variator = MutateBits(mutation_rate=0.1)\n",
+    "\n",
+    "offspring = variator.vary_population(pop)\n",
+    "print (f\"Parent:    {pop}\")\n",
+    "print (f\"Offspring: {offspring}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The selector only operates on individuals whose `.fitness` is defined. Import an evaluator for `BinaryString` to evaluate all items in `pop`."
+    "### Evaluate\n",
+    "\n",
+    "The evaluator assigns to the `.fitness` of all individuals in a population.\n",
+    "\n",
+    "Evaluation sets the stage for selection. Consider which population the algorithm selects from: using $(\\mu+\\lambda)$, offspring competes with parents for selection. To implement this, call `Population.join` to create a population that includes individuals from `pop` and `offspring`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined_pool = pop.join(offspring)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The canonical evaluator (`CountBits`) for bit strings sums all digits in the string. Once the evaluator is initialised, call `.evaluate_population` with the population as argument. Check that all individuals in the population are correctly evaluated.\n",
+    "\n",
+    "Note:  unlike its counterparts `Variator.vary_population` and `Selector.select_population`, `.evaluate_population` does not return a value but rather modifies an attribute of its argument. To prevent any misunderstanding, `.evaluate_population` explicitly returns `None`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitness of [1, 1, 1, 1, 1] is 5\n",
-      "Fitness of [1, 1, 1, 1, 0] is 4\n",
-      "Fitness of [1, 1, 1, 0, 0] is 3\n",
-      "Fitness of [1, 1, 0, 0, 0] is 2\n",
-      "Fitness of [1, 0, 0, 0, 0] is 1\n",
-      "Fitness of [0, 0, 0, 0, 0] is 0\n"
+      "Fitness of [1, 1, 1, 1, 1] is (5,)\n",
+      "Fitness of [1, 1, 1, 1, 0] is (4,)\n",
+      "Fitness of [1, 1, 1, 0, 0] is (3,)\n",
+      "Fitness of [1, 1, 1, 0, 1] is (4,)\n",
+      "Fitness of [0, 1, 1, 1, 1] is (4,)\n",
+      "Fitness of [1, 1, 1, 0, 0] is (3,)\n"
      ]
     }
    ],
    "source": [
     "from evokit.evolvables.binstring import CountBits\n",
     "\n",
-    "CountBits().evaluate_population(pop)\n",
+    "CountBits().evaluate_population(joined_pool)\n",
     "\n",
-    "for individual in pop:\n",
+    "for individual in joined_pool:\n",
     "    print(f\"Fitness of {individual} is {individual.fitness}\")"
    ]
   },
@@ -128,90 +212,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A selector selects from a `Population` into a strict subset of it. For each item selected into this subset, that item is removed from the original `Population` to prevent duplication of references.\n",
+    "### Select\n",
     "\n",
-    "This example uses a `SimpleSelector`, which simply selects a number of individuals with the highest `.fitness`. Set `budget=3` to select 3 such individuals."
+    "A selector selects from a `Population` into a strict subset. The `TruncationSelector`, in particular, selects individuals with the highest `.fitness`.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from evokit.core import SimpleSelector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original population has items ['[1, 1, 0, 0, 0]', '[1, 0, 0, 0, 0]', '[0, 0, 0, 0, 0]']\n",
-      "Output population has items ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]']\n"
+      "From ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]', '[1, 1, 1, 0, 1]', '[0, 1, 1, 1, 1]', '[1, 1, 1, 0, 0]'], the truncation selector\n",
+      "    selects ['[1, 1, 1, 0, 1]', '[0, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]'].\n"
      ]
     }
    ],
    "source": [
-    "sel = SimpleSelector(budget=3)\n",
-    "original_population = pop\n",
-    "parents = sel.select_to_population(original_population)\n",
+    "from evokit.evolvables.selectors import TruncationSelector\n",
     "\n",
-    "print(f\"Original population has items {original_population}\")\n",
-    "print(f\"Output population has items {parents}\")"
+    "new_pop = TruncationSelector(budget=3).select_population(joined_pool)\n",
+    "print(f\"From {joined_pool}, the truncation selector\\n\"\n",
+    "      f\"    selects {new_pop}.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A variator creates new individuals from existing individuals. Here, use `MutateBits` which randomly flips each bit with probability `mutation_rate`. Use 0.1 for now.\n",
+    "## Designing the Algorithm\n",
     "\n",
-    "Apply the mutator to output_population to create a new population of offspring. Note that, unlike selectors, variators do not affect the `Population` that is given argument.\n",
+    "Time to automate! To implement a custom algorithm, extend `Algorithm` and override at least two of its methods:\n",
     "\n",
-    "Notice that not all items in the survivor pool are changed. With `mutation_rate=0.1`, there is a probability of 0.6 that the variator does not affect an individual. The first and third individuals are duplicated exactly."
+    "* `.__init__` initialises parameters of the algorithm itself. In this example, it accepts the initial population and a minimal set of operators.\n",
+    "\n",
+    "* `.step` performs one iteration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parent:    ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]']\n",
-      "Offspring: ['[1, 1, 1, 1, 1]', '[1, 1, 0, 1, 0]', '[1, 1, 1, 0, 0]']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "random.seed(24601)\n",
-    "\n",
-    "from evokit.evolvables.binstring import MutateBits\n",
-    "variator = MutateBits(mutation_rate=0.1)\n",
-    "\n",
-    "survivors = variator.vary_population(parents)\n",
-    "print (f\"Parent:    {parents}\")\n",
-    "print (f\"Offspring: {survivors}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Put everything together, define a `Controller` that automates this process. The algorithm can take one "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,43 +279,59 @@
     "\n",
     "    @override\n",
     "    def step(self) -> None:\n",
-    "        self.population = self.variator.vary_population(self.population)\n",
+    "        self.population = self.population.join(\n",
+    "            self.variator.vary_population(self.population))\n",
+    "\n",
     "        self.evaluator.evaluate_population(self.population)\n",
+    "\n",
     "        self.population = \\\n",
-    "            self.selector.select_to_population(self.population)"
+    "            self.selector.select_population(self.population)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This time, create random individuals by calling `BinaryString.random`."
+    "The creation of individuals can also be automated. For example, `BinaryString.random` creates random binary strings of a given length. Take advantage of this to create a initial population."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial population: ['[0, 0, 1, 1, 0]', '[0, 1, 1, 1, 0]', '[0, 0, 1, 0, 1]', '[0, 0, 0, 1, 0]', '[0, 1, 0, 1, 1]']\n"
+      "Initial population: ['[0, 0, 0, 0, 1]', '[1, 0, 0, 1, 1]', '[1, 1, 1, 0, 1]']\n"
      ]
     }
    ],
    "source": [
-    "another_pop = Population[BinaryString]()\n",
-    "for _ in range(5):\n",
-    "    another_pop.append(BinaryString.random(size=5))\n",
+    "another_pop = Population(*(BinaryString.random(size=5)\n",
+    "                                       for _ in range(3)))\n",
     "\n",
-    "print(f\"Initial population: {another_pop}\")\n",
-    "\n",
-    "ctrl = ExampleAlgorithm(another_pop,\n",
-    "                         CountBits(),\n",
-    "                         SimpleSelector(budget=3),\n",
-    "                         MutateBits(mutation_rate=0.1))"
+    "print(f\"Initial population: {another_pop}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialise an algorithm with `another_pop` as its initial population, using operators mentioned above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctrl = MuPlusLambda(another_pop,\n",
+    "                        CountBits(),\n",
+    "                        TruncationSelector(budget=3),\n",
+    "                        MutateBits(mutation_rate=0.1))"
    ]
   },
   {
@@ -283,33 +343,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current population: ['[1, 1, 0, 1, 1]', '[0, 0, 1, 1, 1]', '[0, 1, 1, 1, 0]']\n",
-      "Current fitnesses: [4, 3, 3]\n",
-      "Current population: ['[1, 1, 0, 1, 1]', '[0, 0, 1, 1, 1]', '[0, 1, 1, 1, 0]']\n",
-      "Current fitnesses: [4, 3, 3]\n",
-      "Current population: ['[1, 1, 0, 1, 1]', '[0, 0, 1, 1, 1]', '[0, 1, 1, 0, 0]']\n",
-      "Current fitnesses: [4, 3, 2]\n",
-      "Current population: ['[1, 1, 0, 1, 1]', '[0, 1, 1, 0, 0]', '[0, 0, 0, 1, 0]']\n",
-      "Current fitnesses: [4, 2, 1]\n",
-      "Current population: ['[1, 1, 0, 1, 1]', '[0, 1, 1, 0, 0]', '[0, 0, 0, 1, 0]']\n",
-      "Current fitnesses: [4, 2, 1]\n",
-      "Current population: ['[1, 1, 0, 1, 1]', '[0, 1, 1, 0, 0]', '[0, 0, 0, 1, 0]']\n",
-      "Current fitnesses: [4, 2, 1]\n",
-      "Current population: ['[1, 1, 0, 1, 1]', '[0, 1, 0, 0, 0]', '[0, 0, 0, 1, 0]']\n",
-      "Current fitnesses: [4, 1, 1]\n",
-      "Current population: ['[0, 1, 0, 1, 1]', '[1, 1, 0, 0, 0]', '[0, 0, 0, 0, 0]']\n",
-      "Current fitnesses: [3, 2, 0]\n",
-      "Current population: ['[0, 1, 0, 0, 1]', '[1, 1, 0, 0, 0]', '[0, 0, 0, 1, 0]']\n",
-      "Current fitnesses: [2, 2, 1]\n",
-      "Current population: ['[1, 1, 1, 0, 0]', '[0, 1, 0, 0, 0]', '[0, 0, 0, 1, 0]']\n",
-      "Current fitnesses: [3, 1, 1]\n"
+      "Current population: ['[1, 0, 0, 1, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]']\n",
+      "Current fitnesses: [(3,), (4,), (4,)]\n",
+      "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]']\n",
+      "Current fitnesses: [(4,), (4,), (4,)]\n",
+      "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]']\n",
+      "Current fitnesses: [(4,), (4,), (4,)]\n",
+      "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(4,), (4,), (5,)]\n",
+      "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(4,), (5,), (5,)]\n",
+      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n"
      ]
     }
    ],
