--- a/docs/source/guides/examples/onemax.ipynb
+++ b/docs/source/guides/examples/onemax.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "from random import getrandbits\n",
-    "from evokit.core.population import Individual\n",
+    "from evokit.core import Individual\n",
     "\n",
     "class BinaryString(Individual[list[int]]):\n",
     "    @override\n",
@@ -122,7 +122,7 @@
     "from random import random\n",
     "from typing import Sequence\n",
     "\n",
-    "from evokit.core.variator import Variator\n",
+    "from evokit.core import Variator\n",
     "\n",
     "class RandomBitMutator(Variator[BinaryString]):\n",
     "    @override\n",
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evokit.core.evaluator import Evaluator\n",
+    "from evokit.core import Evaluator\n",
     "from typing import override\n",
     "\n",
     "class BitDistanceEvaluator(Evaluator[BinaryString]):\n",
@@ -191,9 +191,9 @@
     "\n",
     "An evolutionary algorithm uses operators: evaluators, selectors, and variators. The algorithm should initialise with a population of individuals. These components, except for the selector and the algorithm itself, are already defined.\n",
     "\n",
-    "Because selectors and algorithms are independent to the representation, the framework provides generic ones. These components exist in `evokit.core.selector` and `evokit.core.algorithm`.\n",
+    "Because selectors and algorithms are independent to the representation, the framework provides generic ones. These components can be found in `evokit.evolvables.selectors` and `evokit.evolvables.algorithms`.\n",
     "\n",
-    "This example use an elitist (hall-of-fame) truncation selector, by combining the `Elitist` [interceptor](./interceptor.html) and `core.selector.TruncationSelector`. The algorithm is a `SimpleLinearAlgorithm` which applies operators in this order:\n",
+    "This example use an elitist (hall-of-fame) truncation selector, by combining the `Elitist` [interceptor](./interceptor.ipynb) and `core.selector.TruncationSelector`. The algorithm is a `SimpleLinearAlgorithm` which applies operators in this order:\n",
     "\n",
     "  1. **evaluate** for selection\n",
     "  2. **selection**\n",
@@ -204,13 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evokit.core.selector import Elitist, TruncationSelector\n",
+    "from evokit.evolvables.selectors import Elitist, TruncationSelector\n",
     "\n",
-    "from evokit.core.algorithm import SimpleLinearAlgorithm"
+    "from evokit.evolvables.algorithms import SimpleLinearAlgorithm"
    ]
   },
   {
@@ -224,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evokit.core.population import Population\n",
+    "from evokit.core import Population\n",
     "\n",
     "BINSTRING_LENGTH: int = 1000\n",
     "POPULATION_SIZE: int = 20\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,6 +341,7 @@
    ],
    "source": [
     "from matplotlib import pyplot as plt\n",
+    "\n",
     "plt.title('Training Curve of the Custom Algorithm')\n",
     "plt.xlabel('Generation')\n",
     "plt.ylabel('Fitness of Best Individual')\n",
