--- a/docs/source/guides/examples/lgp.ipynb
+++ b/docs/source/guides/examples/lgp.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Please don't look at me, I'm not done yet."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
