feat(selector!): Deprecate `.coarity`

--- a/docs/source/guides/examples/onemax.ipynb
+++ b/docs/source/guides/examples/onemax.ipynb
@@ -108,9 +108,7 @@
     "2. Override method `.vary` to specify how to create new individuals from existing ones.\n",
     "   Be sure to call `.copy` before making changes to an existing individual.\n",
     "\n",
-    "3. Optionally, initialise attribute `.coarity` to report how many individuals are returned by `.vary`. This attribute is informational: no part of the core framework uses it. Leave it as `None` if the variator can return a variable number of individuals.\n",
-    "\n",
-    "In this example, `.vary` receives an 1-tuple because `.arity=2`. It returns a 2-tuple including the original individual and its offspring, which is reflected by `.coarity=2`."
+    "In this example, `.vary` receives an 1-tuple because `.arity=2`."
    ]
   },
   {
@@ -128,7 +126,6 @@
     "    @override\n",
     "    def __init__(self, mutation_rate: float):\n",
     "        self.arity = 1\n",
-    "        self.coarity = 1\n",
     "\n",
     "        # Not required. Raise an error if the mutation rate is too big or small.\n",
     "        if (mutation_rate < 0 or mutation_rate > 1):\n",
