doc(examples): Fix syntax error then rerun

--- a/docs/source/guides/examples/algorithm.ipynb
+++ b/docs/source/guides/examples/algorithm.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
      "output_type": "stream",
      "text": [
       "Parent:    ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]']\n",
-      "Offspring: ['[1, 1, 1, 0, 1]', '[0, 1, 1, 1, 1]', '[1, 1, 1, 0, 0]']\n"
+      "Offspring: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[0, 1, 1, 0, 1]']\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -193,9 +193,9 @@
       "Fitness of [1, 1, 1, 1, 1] is (5,)\n",
       "Fitness of [1, 1, 1, 1, 0] is (4,)\n",
       "Fitness of [1, 1, 1, 0, 0] is (3,)\n",
-      "Fitness of [1, 1, 1, 0, 1] is (4,)\n",
-      "Fitness of [0, 1, 1, 1, 1] is (4,)\n",
-      "Fitness of [1, 1, 1, 0, 0] is (3,)\n"
+      "Fitness of [1, 1, 1, 1, 1] is (5,)\n",
+      "Fitness of [1, 1, 1, 1, 0] is (4,)\n",
+      "Fitness of [0, 1, 1, 0, 1] is (3,)\n"
      ]
     }
    ],
@@ -220,15 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "From ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]', '[1, 1, 1, 0, 1]', '[0, 1, 1, 1, 1]', '[1, 1, 1, 0, 0]'], the truncation selector\n",
-      "    selects ['[1, 1, 1, 0, 1]', '[0, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]'].\n"
+      "From ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[1, 1, 1, 0, 0]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 0]', '[0, 1, 1, 0, 1]'], the truncation selector\n",
+      "    selects ['[1, 1, 1, 1, 0]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]'].\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
     "\n",
     "from evokit.core import Evaluator, Selector, Variator\n",
     "\n",
-    "class ExampleAlgorithm(Algorithm):\n",
+    "class SimpleMuPlusLambda(Algorithm):\n",
     "\n",
     "    @override\n",
     "    def __init__(self,\n",
@@ -297,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial population: ['[0, 0, 0, 0, 1]', '[1, 0, 0, 1, 1]', '[1, 1, 1, 0, 1]']\n"
+      "Initial population: ['[1, 0, 0, 1, 1]', '[1, 0, 0, 0, 1]', '[0, 1, 1, 1, 0]']\n"
      ]
     }
    ],
@@ -324,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctrl = MuPlusLambda(another_pop,\n",
+    "ctrl = SimpleMuPlusLambda(another_pop,\n",
     "                        CountBits(),\n",
     "                        TruncationSelector(budget=3),\n",
     "                        MutateBits(mutation_rate=0.1))"
@@ -338,28 +338,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the algorithm. Observe that each iteration results in a new population. This is because `ExampleAlgorithm` replaces the entirely of its population with the survivor pool. Doing so might, as is shown in the example, result in an decrease in fitness."
+    "Run the algorithm. Observe an increase in fitness across generations: the algorithm runs correctly!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current population: ['[1, 0, 0, 1, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]']\n",
-      "Current fitnesses: [(3,), (4,), (4,)]\n",
-      "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]']\n",
-      "Current fitnesses: [(4,), (4,), (4,)]\n",
-      "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]']\n",
-      "Current fitnesses: [(4,), (4,), (4,)]\n",
-      "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current population: ['[1, 0, 0, 1, 1]', '[0, 1, 1, 1, 0]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(3,), (3,), (5,)]\n",
+      "Current population: ['[0, 1, 1, 1, 1]', '[1, 1, 1, 0, 1]', '[1, 1, 1, 1, 1]']\n",
       "Current fitnesses: [(4,), (4,), (5,)]\n",
       "Current population: ['[1, 1, 1, 0, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
       "Current fitnesses: [(4,), (5,), (5,)]\n",
+      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
+      "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
+      "Current fitnesses: [(5,), (5,), (5,)]\n",
       "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
       "Current fitnesses: [(5,), (5,), (5,)]\n",
       "Current population: ['[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]', '[1, 1, 1, 1, 1]']\n",
