--- a/docs/source/guides/examples/selector.ipynb
+++ b/docs/source/guides/examples/selector.ipynb
@@ -14,7 +14,7 @@
     "In an evolutionary algorithm, a selector selects from a set of individuals into a strict subset. Because the process uses the fitness of individuals, selection takes place after evaluation:\n",
     "\n",
     "<center>\n",
-    "<img src='media/highlight-selector.svg' style='width: 25em'></img>\n",
+    "<img src='media/ec-selection-strategies.svg' style='width: 40em'></img>\n",
     "</center>\n"
    ]
   },
@@ -28,12 +28,12 @@
     "\n",
     "To begin, initialise a `Population` of binary string representations.\n",
     "\n",
-    "For now, manually assign to the `.fitness` of each individual. The `Evaluator` does this automatically. See the [OneMax tutorial](./onemax.html) for an example."
+    "For now, manually assign to the `.fitness` of each individual. The `Evaluator` does this automatically. See the [OneMax tutorial](./onemax.ipynb) for an example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
