doc(accountant): Remove mention of local file structure

--- a/docs/source/guides/examples/accountant.ipynb
+++ b/docs/source/guides/examples/accountant.ipynb
@@ -8,19 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "nb_dir = os.path.abspath(os.path.join('..', '..', '..', '..'))\n",
-    "if nb_dir not in sys.path:\n",
-    "    sys.path.append(nb_dir)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,7 +30,11 @@
     }
    ],
    "source": [
-    "from evokit.core import SimpleLinearAlgorithm, Population, SimpleSelector\n",
+    "from evokit.core import Population\n",
+    "\n",
+    "from evokit.evolvables.algorithms import SimpleLinearAlgorithm\n",
+    "\n",
+    "from evokit.evolvables.selectors import TruncationSelector\n",
     "\n",
     "from evokit.evolvables.binstring import BinaryString, CountBits, MutateBits\n",
     "\n",
@@ -61,7 +52,7 @@
     "ctrl = SimpleLinearAlgorithm(evaluator=CountBits(),\n",
     "                              variator=MutateBits(mutation_rate=0.1),\n",
     "                              population = pop,\n",
-    "                              selector=SimpleSelector(budget=POPULATION_SIZE))\n",
+    "                              selector=TruncationSelector(budget=POPULATION_SIZE))\n",
     "\n",
     "print(f\"Population is {pop}\")"
    ]
